# whai

./: .gitignore  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_STATUS.md  TESTING.md  noxfile.py  pyproject.toml
.cursor/commands/: close-session.md
.cursor/rules/: coding-style.mdc  implementation.mdc  solutions.mdc  vision.mdc
.github/workflows/: pr-checks.yml  publish.yml
defaults/: config.toml  system_prompt.txt
defaults/roles/: assistant.md  debug.md  default.md
playground/: SHELL_ISSUE.md  repro_powershell.py
terma/: DEV.md  TODO.md  __init__.py  __main__.py  config.py  config_wizard.py  constants.py  context.py  interaction.py  llm.py  logging_setup.py  main.py  role_cli.py  ui.py  utils.py
terma/doc/: CHANGELOG.md  DEV.md
tests/: __init__.py  conftest.py  test_cli_context_integration.py  test_cli_e2e.py  test_config.py  test_config_wizard.py  test_context.py  test_context_capture_fix.py  test_inline_parsing.py  test_integration.py  test_interaction.py  test_llm.py  test_llm_streaming.py  test_llm_validation.py  test_role_cli.py  test_role_precedence.py  test_session_logger.py  test_session_logger_integration.py  test_shell_detection.py  test_whai_shell_integration.py
tests/cli/: test_command_only_cli.py
tests/e2e/: test_cli_e2e.py  test_cross_platform.py  test_first_run.py  test_insert_command_shell_snippets.py  test_tmux_integration.py
tests/integration/: test_cli_context_integration.py  test_cli_workflows.py  test_command_timeout.py  test_conversation_recovery.py  test_error_recovery.py  test_mcp_integration.py  test_multi_provider.py  test_multi_turn_conversation.py  test_session_context.py  test_session_logger_integration.py  test_streaming_parity.py  test_timeout_context_capture.py  test_token_limit.py  test_whai_shell_integration.py
tests/mocks/: litellm.py
tests/performance/: test_performance_benchmarks.py
tests/security/: test_input_sanitization.py
tests/unit/: TEST_REVIEW_REPORT.md  test_approval_tool.py  test_cli_parsing.py  test_config.py  test_config_wizard.py  test_llm.py  (+16 more)
whai/: __init__.py  __main__.py  config.py  config_wizard.py  constants.py  context.py  interaction.py  llm.py  logging_setup.py  main.py  role_cli.py  ui.py  utils.py
(+44 files in other folders)
